chaim-bprint-spec/tests/fixtures/valid/order-with-name-overrides.bprint
{
  "schemaVersion": "1.1",
  "entityName": "Order",
  "description": "Order entity with fields that need nameOverride for code generation",
  "identity": {
    "fields": ["order-id"]
  },
  "fields": [
    {
      "name": "order-id",
      "type": "string",
      "required": true,
      "description": "Unique order identifier"
    },
    {
      "name": "order-date",
      "type": "timestamp",
      "required": true,
      "description": "When the order was placed"
    },
    {
      "name": "2fa-verified",
      "nameOverride": "twoFactorVerified",
      "type": "boolean",
      "required": false,
      "description": "Whether 2FA was completed for this order"
    },
    {
      "name": "customerId",
      "type": "string",
      "required": true,
      "description": "Customer who placed the order"
    }
  ]
}
